# Sentimen_Analysis_on_Tweets_explaining_Wirecard

./: .gitignore  2016_data.json  2016_wirecard_data.json  README.md  Untitled.ipynb  data.csv  data.json  test.csv  your_file.json
.ipynb_checkpoints/: Untitled-checkpoint.ipynb
Master_Thesis/: Untitled.ipynb  pyproject.toml
Master_Thesis/tests/: test_master_thesis.py
data/: MA.csv  V.csv  WDI.HM-2.csv  ^GDAXI.csv  ^STOXX50E.csv
data/Raw_File/Manager_DE/: user.csv
data/Test/: WDI.HM.csv  ^GDAXI.csv
data/WRCDF_DE/: data.csv
data/WRCDF_EN/: data.csv  user.csv
master_thesis_3.9.10/: pyproject.toml
master_thesis_3.9.10/tests/: test_master_thesis_3_9_10.py
prod/: Data Check.ipynb  get_twitter_data.py
prod/Regression/: Regression.ipynb
prod/Sentiment_Analysis/: Sentiment_Deutsch.ipynb
prod/data_preprocessing/: Preparation_English_Tweets.ipynb  Preparation_German_Tweets.ipynb  Sample_Files.ipynb  test.csv
tests/: Emoji.csv  Preparation_German_Tweets.ipynb  Regression.ipynb  Sentiment_Analysis_Twitter_Data.ipynb  Sentiment_Deutsch.ipynb  Sentiment_English.ipynb  Validation_Bjarnes_Files.ipynb  get_twitter_data.py  tempCodeRunnerFile.py  test.csv  test.py  test_daten.csv
tests/.ipynb_checkpoints/: Preparation_German_Tweets-checkpoint.ipynb  Regression-checkpoint.ipynb  Sentiment_Analysis_Twitter_Data-checkpoint.ipynb  Sentiment_English-checkpoint.ipynb  Test_Regression-checkpoint.ipynb  Untitled-checkpoint.ipynb
tests/Data_Preparation/: Preparation_English_Tweets.ipynb  Preparation_German_Tweets.ipynb
tests/Further_Files/: tempCodeRunnerFile.py
(+95 files in other folders)
