[tool.poetry]
name = "Master_Thesis"
version = "0.1.0"
description = ""
authors = ["TobiasBaehren <59140525+TobiasBaehren@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^1.22.2"
ipykernel = "^6.9.1"
matplot = "^0.1.9"
pandas = "^1.4.1"
nltk = "^3.7"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = "^22.1.0"
flake8 = "^4.0.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
