[tool.poetry]
name = "master_thesis_3.9.10"
version = "0.1.0"
description = ""
authors = ["TobiasBaehren <59140525+TobiasBaehren@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.9"
flair = "^0.10"
pandas = "^1.4.1"
numpy = "^1.22.3"
jupyter = "^1.0.0"
ipykernel = "^6.9.2"
nltk = "^3.7"
vader = "^0.0.3"
vaderSentiment = "^3.3.2"
stanza = "^1.3.0"
germansentiment = "^1.0.7"
transformers = "^4.18.0"
python-dotenv = "^0.20.0"
requests = "^2.27.1"
wordcloud = "^1.8.1"
HanTa = "^0.2.0"
torch = "^1.12.0"
emoji = "2.0.0"
statsmodels = "^0.13.2"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
